default/objects/success__Event__c/success__Event__c.object-meta.xml
<CustomObject>
    <description>This object should be used for implementations that require Rewards to be generated based on external data that is captured outside of Salesforce. Using Behaviours, Rewards can be generated and awarded to Players in recognition for activities completed on a specified date.</description>
    <label>External Event</label>
    <nameField>
        <displayFormat>EVT-{00000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>