default/objects/success__Event__c/fields/success__Occurence_Date__c.field-meta.xml
<CustomField>
    <fullName>success__Occurence_Date__c</fullName>
    <label>Occurrence Date</label>
    <type>DateTime</type>
</CustomField>