default/objects/success__Event__c/fields/success__Type__c.field-meta.xml
<CustomField>
    <fullName>success__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>