default/objects/success__Event__c/fields/success__Value__c.field-meta.xml
<CustomField>
    <fullName>success__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>