default/objects/success__Event__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <columns>NAME</columns>
    <columns>success__User__c</columns>
    <columns>success__Value__c</columns>
    <columns>success__Type__c</columns>
    <columns>success__Occurence_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>